# simple_queue

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  context.md
.cargo/: audit.toml  config.toml
.sqlx/: query-073dc1d0da60c7b3a97d26a56055008aee63dea66189b1b3276fdf60d7f3e19d.json  query-1ed5f09324cb7d055edc3d16dc8d475415101d2910398bbb427073a510949f7f.json  query-1f28d696a18d5b424b20818b913e579d44794e5de71f207f1f52483487d5e374.json  query-33c1d1fdb32bbdaac76148103e513a3c38eb9e1531bc4b26fba372af64ef5023.json  query-3615ddb67036527b2ca3639180342b5782370b9ecd16341a55f0d59fca705cfe.json  query-4068c79b3f07d871e02bd06d98451bc4047862d65e66a87a2552745f24eb2340.json  query-4f716b8397ca5b25eb3aa3bee104426ec61cf80dfed52b67f006b725ab0234bb.json  query-62bab8225ad023238ce3ab90c41695a9989d8bb23317fa7b231b02f06b6a99ed.json  query-67f88d3cca9345852edef6c404475aecb7f9f1ad94643332536cc7621462e3b8.json  query-827dca36ac113e12f18980e1fa4aa39c2e45be399ba7b03b3437ac124e5d4429.json  query-83c3f5acecf5e53e48bc7ab291352870d6a4444133ce23534fa32bb2681eccdd.json  query-925968d722a113a41d560307702c1c3bfbf0888c3481104c48e124b533fb38f7.json  query-ac722190d6d7eecc9f4fa82c43c595dd8bd8149b78ceef203dbd5f6e51cb3270.json  query-c6bc81bb6325807b55282608946d7a1417465632899d472d9a4ed67e281adf95.json  query-d5dd02f2da63e9d0db38c4c72ee105e7648e772ba7b5e238936d5dd8beccf190.json  query-d7a32c7affa9b0c441cd7dcfd8da015ea1e59e1de97e69b5733cba7df33d8eb2.json  query-e90cc32f07b8614feda5ddb1e117a05c4bdf8654fe6d5a7e454cca3e5867cb27.json  query-eee39775a1c3d4de6870becc150e16b6e72b5920a7eb8b56174ef3889735418d.json  query-f89c6c6220aaeb46e0868aabd846708ad3a6efd19fce183ef3d708be908c2fc3.json  (+1 more)
examples/: basic.rs  test_run.rs
migrations/: 0001_init.sql  (+2 more)
(+20 files in other folders)
