[package]
name = "simple-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "sqlx-postgres", "uuid", "runtime-tokio"] }
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
