[package]
name = "simple-queue"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A simple persistent queue implementation in Rust backed by PostgreSQL and tokio"
keywords = ["persistent_queue", "queue", "postgres", "tokio"]
categories = ["concurrency", "asynchronous"]
repository = "https://github.com/exlee/simple_queue"
rust-version = "1.88.0"
readme = "README.md"

[[example]]
name = "test_run"
doc-scrape-examples = false
[features]
default = ["janitor"]
janitor = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
futures = "0.3.32"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "sqlx-postgres", "uuid", "runtime-tokio"] }
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
